:bug: fix overflow scroll being both x and y as well as not being auto

--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,7 @@
 }
 
 .tiptap {
-  @apply max-h-96 overflow-scroll;
+  @apply max-h-96 overflow-y-auto;
 }
 
 .tiptap p {
